# ChangeLog for www-plugins/adobe-flash
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/www-plugins/cvs-repo/gentoo-x86/www-plugins/adobe-flash/ChangeLog,v 1.89 2011/07/13 00:38:30 lack Exp $

*adobe-flash-10.3.181.34 (13 Jul 2011)

  13 Jul 2011; Jim Ramsay <lack@gentoo.org> +adobe-flash-10.3.181.34.ebuild:
  Version bump: 10.3.181.34 is released (Bug #373463)

  17 Jun 2011; Alex Legler <a3li@gentoo.org>
  -adobe-flash-10.3.181.14-r1.ebuild, adobe-flash-10.3.181.26.ebuild:
  amd64 stable for security bug 370215; removing vulnerable version

  16 Jun 2011; Thomas Kahle <tomka@gentoo.org> adobe-flash-10.3.181.26.ebuild:
  x86 stable per bug 370215

*adobe-flash-10.3.181.26 (15 Jun 2011)

  15 Jun 2011; Alex Legler <a3li@gentoo.org> -adobe-flash-10.3.181.22.ebuild,
  +adobe-flash-10.3.181.26.ebuild:
  Non-maintainer commit: Version bump for security bug 370215, removing
  unneeded ~arch version

*adobe-flash-10.3.181.22 (14 Jun 2011)

  14 Jun 2011; Alex Legler <a3li@gentoo.org> +adobe-flash-10.3.181.22.ebuild:
  Non-maintainer commit: Version bump for security bug 370215

  01 Jun 2011; Jim Ramsay <lack@gentoo.org> metadata.xml:
  Added local USE flag description for 'bindist' (Bug #369257)

  27 May 2011; Markos Chandras <hwoarang@gentoo.org>
  adobe-flash-10.3.181.14-r1.ebuild:
  Stable on amd64 wrt bug #367031

  26 May 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  adobe-flash-10.3.181.14-r1.ebuild:
  x86 stable wrt security bug #367031

*adobe-flash-10.3.181.14-r1 (14 May 2011)

  14 May 2011; Jim Ramsay <lack@gentoo.org> -adobe-flash-10.3.181.14.ebuild,
  +adobe-flash-10.3.181.14-r1.ebuild:
  Fix nspluginwrapper auto-install logic for amd64

  14 May 2011; Jim Ramsay <lack@gentoo.org> -adobe-flash-9.0.289.0.ebuild,
  -adobe-flash-10.1.102.64.ebuild, -adobe-flash-10.2.152.27.ebuild,
  -adobe-flash-10.2.152.27_p201011173-r1.ebuild,
  -adobe-flash-10.2.152.27_p201011173-r2.ebuild,