@@ -1,6 +1,12 @@
 # ChangeLog for www-plugins/adobe-flash
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/www-plugins/cvs-repo/gentoo-x86/www-plugins/adobe-flash/ChangeLog,v 1.89 2011/07/13 00:38:30 lack Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/www-plugins/cvs-repo/gentoo-x86/www-plugins/adobe-flash/ChangeLog,v 1.90 2011/07/14 23:54:56 lack Exp $
+
+*adobe-flash-11.0.1.60_beta201107131 (14 Jul 2011)
+
+  14 Jul 2011; Jim Ramsay <lack@gentoo.org>
+  +adobe-flash-11.0.1.60_beta201107131.ebuild:
+  Version bump: Flash player 11 beta is out, and 64-bit support is back!
 
 *adobe-flash-10.3.181.34 (13 Jul 2011)
 
